--- a/demo.html
+++ b/demo.html
@@ -2,17 +2,17 @@
 <html lang="en">
 	<meta charset="utf-8">
 	<title>Demo Drag Sticker</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 	<link rel="stylesheet" href="css/style.css">
 
 <body>
     <div class="container">
         <ul id="hp-drag-sticker" class="hp-drag-sticker">
-            <li>Sticker 1</li>
-            <li>Sticker 2</li>
-            <li>Sticker 3</li>
-            <li>Sticker 4</li>
-            <li>Sticker 5</li>
+            <li><img src="images/1.jpg" alt=""></li>
+            <li><img src="images/2.jpg" alt=""></li>
+            <li><img src="images/3.jpg" alt=""></li>
+            <li><img src="images/4.jpg" alt=""></li>
+            <li><img src="images/5.jpg" alt=""></li>
         </ul>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
